applications/it-tools/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools:2024.10.22-7ca5933
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
            runAsNonRoot: false
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /
              port: 80
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            timeoutSeconds: 1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
